# trufo-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main-merge-guard.yml  publish.yml
docs/: c2pa_feature_list.md  cli.md
docs/api/: api_access.md  api_auth.md  api_c2pa.md  tca_ca.md  tca_ra.md
docs/quickstart/: 0_auth.md  0_auth.py  0_tps_access.md  0_tps_access.py  1_c2pa_cert.md  1_c2pa_cert.py  2_ai_labeling.md  2_ai_labeling.py  3_cawg_publish.md  3_cawg_publish.py  4_distributed_signing.md  4_remote_signing.md
examples/: tca_get_c2pa_cert.py  tps_test_sign_c2pa.py
skills/trufo-lib-dev/: SKILL.md
skills/trufo-lib-release/: SKILL.md
src/trufo/: __init__.py
src/trufo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/trufo/api/: __init__.py  auth.py  endpoints.py  session.py
src/trufo/c2pa/: __init__.py  actions.py  assertions.py
src/trufo/crypt/: __init__.py  algorithms.py  keygen.py  tca_certs.py
src/trufo/crypto/: __init__.py  algorithms.py  keygen.py
src/trufo/intf/: __init__.py  api_credentials.py  c2pa_certificates.py  cli.py  cli_credentials.py  credentials.py
src/trufo/util/: credentials.py  optional_imports.py
tests/: conftest.py
tests/unit/: test_enums.py  test_version_registration.py
tests/unit/api/: test_auth.py  test_session.py  test_sign_c2pa.py  test_tca_c2pa.py  test_tca_cawg_interim.py  test_tca_cert.py  test_tca_test.py  test_tps_enums.py
tests/unit/crypt/: test_algorithms.py  test_keygen.py  test_tca_certs.py
tests/unit/crypto/: test_algorithms.py  (+1 more)
(+13 files in other folders)
