[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trufo"
version = "0.1.0"
requires-python = ">=3.10"
description = "Trufo SDK for content provenance, watermarking, and fingerprinting"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
